# director-agent

./: .music_history.json  README.md  debug_image.py  ideas.md  ideas2.md  pyproject.toml  robustness_report.md  script-tool-list.md
src/director_agent/: cli.py  config.py  core.py  editor.py  executor.py  models.py  planner.py
tests/: test_config.py  test_models.py
